retrieveUnpackaged/objects/Application_Feedback__c.object
<CustomObject>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application ID</label>
        <referenceTo>Application3__c</referenceTo>
        <relationshipLabel>Application Feedback</relationshipLabel>
        <relationshipName>Application_Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Clarification_Questions__c</fullName>
        <label>Clarification Questions</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Expert_Review_Panel__c</fullName>
        <label>Expert Review Panel</label>
        <referenceTo>Expert_Review_Panel__c</referenceTo>
        <relationshipLabel>Application Feedback</relationshipLabel>
        <relationshipName>Application_Feedback</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Instructions__c</fullName>
        <label>Instructions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Legal_Name__c</fullName>
        <formula>Application__r.Organization__r.Legal_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Legal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NOFA_Group_Name__c</fullName>
        <formula>Expert_Review_Panel__r.NOFA_Group_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NOFA Group Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Name__c</fullName>
        <formula>Application__r.Organization__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organization Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Panel_ID__c</fullName>
        <formula>Expert_Review_Panel__r.Panel__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Panel ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <formula>Application__r.Project__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage_ID__c</fullName>
        <formula>Expert_Review_Panel__r.Stage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Review Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In - Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Returned for Rework</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted by CNCS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Application Feedback</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Application__c</columns>
        <columns>Legal_Name__c</columns>
        <columns>NOFA_Group_Name__c</columns>
        <columns>Stage_ID__c</columns>
        <columns>Panel_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AF-{000000}</displayFormat>
        <label>Application Feedback Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Feedback</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>